--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   color: rgb(156,137,147);
 }
 p {
-  text-align: justify;
+  text-align: left;
 }
 h1, h2, h4 {
   font-family: 'Cinzel', serif;
@@ -82,8 +82,10 @@ section .content {
   }
   .next-button {
     position: fixed;
-    top: calc(50% - 1rem);
+    top: calc(50% - 0.5rem);
     left: calc(100% - 42px);
+    padding-top: 0;
+    line-height: 1rem;
   }
 }
 
